Actually fixed alignment issues

--- a/public/index.css
+++ b/public/index.css
@@ -1,5 +1,4 @@
 .section {
-	display: inline;
 	width: 390px;
 	font-family: Avenir;
 	border: 2px solid #00B4C3;
